# SpaceInvaders

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: aliens.cpp  main.cpp  sprites.cpp  utility.cpp
src/include/: data.hpp  utility.hpp
src/include/data/: data.hpp
src/include/sprites/: aliens.hpp  player.hpp  text.hpp
src/include/util/: utility.hpp
